--- a/src/Loader.css
+++ b/src/Loader.css
@@ -1,3 +1,21 @@
+div {
+   white-space: pre-wrap;
+}
+
 div.invisible {
    display: none;
+}
+
+label {
+   float: left;
+}
+
+span {
+   display: block;
+   overflow: hidden;
+   padding: 0px 4px 0px 6px;
+}
+
+input.textInput {
+   width: 25%;
 }
