--- a/src/Loader.css
+++ b/src/Loader.css
@@ -13,7 +13,7 @@
   align-items: center;
   background: #0dcaf057;
   height: 100vh;
-  width: 100vh;
+  width: 100vw;
 }
 
 /* Styling for the container rectangle that hosts all other components */
